Работа над ошибками #

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 	<title>Mesto</title>
 	<link rel="stylesheet" href="pages/index.css">
 </head>
+
 <body class="page">
 	<header class="header">
 		<img class="header__logo" src="images/logo.svg" alt="Логотип">
@@ -86,21 +88,21 @@
 		</section>
 	</main>
 	<footer class="footer">
-		<p class="footer__copyrigth">&copy;2020 Mesto Russia</p>
+		<p class="footer__copyrigth">&copy;2023 Mesto Russia</p>
 	</footer>
 
-
-	
 	<div class="popup">
 		<div class="popup__container">
 			<button type="button" class="popup__close" aria-label="Закрытие"></button>
 			<h3 class="popup__name">Редактировать профиль</h3>
 			<form class="popup__form" name="profile" novalidate>
 				<label class="popup__label">
-					<input type="text" class="popup__input popup__input_name" name="username" required placeholder="Ваше имя" minlength="5" maxlength="12">
+					<input type="text" class="popup__input popup__input_name" name="username" required placeholder="Ваше имя"
+						minlength="5" maxlength="12">
 				</label>
 				<label class="popup__label">
-					<input type="text" class="popup__input popup__input_profession" name="description" required placeholder="Расскажи о себе" minlength="3" maxlength="187">
+					<input type="text" class="popup__input popup__input_description" name="description" required
+						placeholder="Расскажите о себе" minlength="3" maxlength="187">
 				</label>
 				<button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
 			</form>
@@ -109,4 +111,5 @@
 	</div>
 	<script src="index.js"></script>
 </body>
+
 </html>
