--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
 				<img src="images/donjak.jpeg" alt="Дон Жак" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Дон Жак</h2>
-					<div class="elements__like-area">
-						<button class="elements__like elements__like_active" type="button" aria-label="Лайк"></button>
-						<p class="elements__likes">567</p>
+						<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 					</div>
 				</div>
 			</div>
@@ -39,9 +37,7 @@
 				<img src="images/bp.jpeg" alt="Трубач" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Трубач</h2>
-					<div class="elements__like-area">
-						<button class="elements__like elements__like_active" type="button" aria-label="Лайк"></button>
-						<p class="elements__likes">642</p>
+						<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 					</div>
 				</div>
 			</div>
@@ -49,9 +45,7 @@
 				<img src="images/a10308a2b7f2983ec0197a2d7e3d6ef9.jpeg" alt="Водолаз" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Водолаз</h2>
-					<div class="elements__like-area">
-						<button class="elements__like elements__like_active" type="button" aria-label="Лайк"></button>
-						<p class="elements__likes">714</p>
+						<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 					</div>
 				</div>
 			</div>
@@ -59,9 +53,7 @@
 				<img src="images/ii.jpeg" alt="Автограф" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Автограф</h2>
-					<div class="elements__like-area">
-						<button class="elements__like elements__like_active" type="button" aria-label="Лайк"></button>
-						<p class="elements__likes">754</p>
+						<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 					</div>
 				</div>
 			</div>
@@ -69,9 +61,7 @@
 				<img src="images/Jacques.jpg" alt="Жить в кайф" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Жить в кайф</h2>
-					<div class="elements__like-area">
-						<button class="elements__like elements__like_active" type="button" aria-label="Лайк"></button>
-						<p class="elements__likes">777</p>
+						<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 					</div>
 				</div>
 			</div>
@@ -79,9 +69,7 @@
 				<img src="images/i.jpeg" alt="Арт" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Арт</h2>
-					<div class="elements__like-area">
-						<button class="elements__like elements__like_active" type="button" aria-label="Лайк"></button>
-						<p class="elements__likes">815</p>
+						<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 					</div>
 				</div>
 			</div>
@@ -97,12 +85,12 @@
 			<h3 class="popup__name">Редактировать профиль</h3>
 			<form class="popup__form" name="profile" novalidate>
 				<label class="popup__label">
-					<input type="text" class="popup__input popup__input_name" name="username" required placeholder="Ваше имя"
-						minlength="5" maxlength="12">
+					<input type="text" class="popup__input popup__input_type_name" name="username" required placeholder="Ваше имя"
+						minlength="5" maxlength="">
 				</label>
 				<label class="popup__label">
-					<input type="text" class="popup__input popup__input_description" name="description" required
-						placeholder="Расскажите о себе" minlength="3" maxlength="187">
+					<input type="text" class="popup__input popup__input_type_job" name="description" required
+						placeholder="Расскажите о себе" minlength="3" maxlength="">
 				</label>
 				<button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
 			</form>
