--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
 					<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 				</div>
 			</div>
-			</div>
 			<div class="elements__element">
 				<img src="images/bp.jpeg" alt="Трубач" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Трубач</h2>
 					<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 				</div>
-			</div>
 			</div>
 			<div class="elements__element">
 				<img src="images/a10308a2b7f2983ec0197a2d7e3d6ef9.jpeg" alt="Водолаз" class="elements__photo">
@@ -48,14 +46,12 @@
 					<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 				</div>
 			</div>
-			</div>
 			<div class="elements__element">
 				<img src="images/ii.jpeg" alt="Автограф" class="elements__photo">
 				<div class="elements__info">
 					<h2 class="elements__title">Автограф</h2>
 					<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 				</div>
-			</div>
 			</div>
 			<div class="elements__element">
 				<img src="images/Jacques.jpg" alt="Жить в кайф" class="elements__photo">
@@ -64,7 +60,6 @@
 					<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 				</div>
 			</div>
-			</div>
 			<div class="elements__element">
 				<img src="images/i.jpeg" alt="Арт" class="elements__photo">
 				<div class="elements__info">
@@ -72,13 +67,11 @@
 					<button class="elements__like elements__like-active" type="button" aria-label="Лайк"></button>
 				</div>
 			</div>
-			</div>
 		</section>
 	</main>
 	<footer class="footer">
 		<p class="footer__copyrigth">&copy;2023 Mesto Russia</p>
 	</footer>
-
 	<div class="popup">
 		<div class="popup__container">
 			<button type="button" class="popup__close" aria-label="Закрытие"></button>
@@ -86,16 +79,15 @@
 			<form class="popup__form" name="profile" novalidate>
 				<label class="popup__label">
 					<input type="text" class="popup__input popup__input_type_name" name="username" required placeholder="Ваше имя"
-						minlength="5" maxlength="">
+						minlength="5" maxlength="99">
 				</label>
 				<label class="popup__label">
 					<input type="text" class="popup__input popup__input_type_job" name="description" required
-						placeholder="Расскажите о себе" minlength="3" maxlength="">
+						placeholder="Расскажите о себе" minlength="3" maxlength="99">
 				</label>
 				<button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
 			</form>
 		</div>
-
 	</div>
 	<script src="index.js"></script>
 </body>
