--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 			</form>
 		</div>
 	</div>
-	<div id="elements-image" class="popup popup__background">
+	<div id="elements-image" class="popup popup_type_image">
 		<div class="popup__container popup__container-image">
 			<figure class="popup__image">
 				<img src="#" class="popup__item-img" alt="#">
