--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 			<h3 class="popup__name">Редактировать профиль</h3>
 			<form class="popup__form" name="profile" novalidate>
 				<label class="popup__label">
-					<input type="text" class="popup__input popup__input_type_name" name="username" required placeholder="Ваше имя"
-						minlength="5" maxlength="99">
+					<input type="text" class="popup__input popup__input_type_name" name="username" placeholder="Ваше имя"
+						minlength="2" maxlength="40" required>
+					<span id="username-error" class="popup__input-error"></span>
 				</label>
 				<label class="popup__label">
-					<input type="text" class="popup__input popup__input_type_job" name="description" required
-						placeholder="Расскажите о себе" minlength="3" maxlength="99">
+					<input type="text" class="popup__input popup__input_type_job" name="description"
+						placeholder="Расскажите о себе" minlength="2" maxlength="200" required>
+					<span id="description-error" class="popup__input-error"></span>
 				</label>
 				<button type="submit" class="popup__submit" aria-label="Сохранить">Сохранить</button>
 			</form>
@@ -56,11 +58,13 @@
 			<form class="popup__form popup__form-card" name="mesto" novalidate>
 				<label class="popup__label">
 					<input type="text" class="popup__input popup__input_type_place" name="placename" required
-						placeholder="Название" minlength="5" maxlength="99">
+						placeholder="Название" minlength="2" maxlength="30">
+					<span id="placename-error" class="popup__input-error"></span>
 				</label>
 				<label class="popup__label">
 					<input type="url" class="popup__input popup__input_type_image" name="placeimage" required
-						placeholder="Ссылка на картинку" minlength="5" maxlength="99">
+						placeholder="Ссылка на картинку">
+					<span id="placeimage-error" class="popup__input-error"></span>
 				</label>
 				<button type="submit" class="popup__submit" aria-label="Создать">Сохранить</button>
 			</form>
@@ -87,6 +91,7 @@
 			</div>
 		</article>
 	</template>
+	<script src="scripts/validate.js" defer></script>
 	<script src="scripts/constants.js" defer></script>
 	<script src="scripts/index.js" defer></script>
 </body>
